--- a/data/cards/25191307.yaml
+++ b/data/cards/25191307.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Ataqueraptor - Abutre Florescente
   ja: <ruby>ＲＲ<rt>レイド・ラプターズ</rt></ruby>－ブルーム・ヴァルチャー
   ja_romaji: Reido Raputāzu - Burūmu Varuchā
   ko: RR－블룸 벌쳐
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se você não controlar nenhum monstro com a face para cima, que não sejam monstros Besta Alada: você pode Invocar por Invocação-Especial tanto este card quanto 1 monstro "Ataqueraptor" da sua mão. Se você não controlar nenhum monstro: você pode escolher 2 monstros "Ataqueraptor" de Nível 4 ou menos no seu Cemitério, incluindo este card; Invoque-os por Invocação-Especial em Posição de Defesa. Você só pode usar 1 efeito de "Ataqueraptor - Abutre Florescente" por turno e apenas uma vez por turno e, além disso, você não pode Invocar monstros por Invocação-Especial no turno em que ativar qualquer um destes efeitos, exceto monstros de TREVAS.
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できず、この効果を発動するターン、自分は闇属性モンスターしか特殊召喚できない。①：自分フィールドに鳥獣族モンスター以外の表側表示モンスターが存在しない場合に発動できる。このカードと「ＲＲ」モンスター１体を手札から特殊召喚する。②：自分フィールドにモンスターが存在しない場合、このカードを含む自分の墓地のレベル４以下の「ＲＲ」モンスター２体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
   ko: |-
