--- a/data/cards/27868563.yaml
+++ b/data/cards/27868563.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Motoqueiro Goblin Boom Mach
   ja: <ruby>百鬼羅刹<rt>ゴブリンライダー</rt></ruby> <ruby>神速<rt>マッハ</rt></ruby>ブーン
   ja_romaji: Goburin Raidā Mahha Būn
   ko: 고블린라이더 마하 부웅
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Uma vez por Corrente, durante a Fase Principal, se este card estiver na sua mão ou no Cemitério (Efeito Rápido): você pode desassociar 1 Matéria Xyz de um monstro em qualquer campo e, se isso acontecer, Invoque este card por Invocação-Especial e, além disso, você não pode Invocar "Motoqueiro Goblin Boom Mach" por Invocação-Especial até o final do próximo turno.
   ja: |-
     ①：このカードが手札・墓地に存在する場合、自分・相手のメインフェイズに発動できる。フィールドのＸ素材を１つ取り除き、このカードを特殊召喚する。この効果の発動後、次のターンの終了時まで自分は「百鬼羅刹 神速ブーン」を特殊召喚できない。
   ko: |-
