--- a/data/cards/52596406.yaml
+++ b/data/cards/52596406.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Rolim Branco
   ja: <ruby>白曼波<rt>ホワイト・マンボウ</rt></ruby>
   ja_romaji: Howaito Manbou
   ko: 화이트 맘보
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card estiver na sua mão: você pode escolher 1 monstro Peixe de Nível 4 ou menos no seu Cemitério com o mesmo nome de um card que você controla; Invoque este card por Invocação-Especial e, se isso acontecer, Invoque esse monstro por Invocação-Especial. Você só pode usar este efeito de "Rolim Branco" uma vez por turno. Se este card for Invocado por Invocação-Especial do Cemitério: você pode considerá-lo como um Regulador neste turno.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが手札に存在する場合、同名カードが自分フィールドに存在する自分の墓地のレベル４以下の魚族モンスター１体を対象として発動できる。このカードを特殊召喚し、対象のモンスターを特殊召喚する。②：このカードが墓地から特殊召喚した場合に発動できる。このターン、このカードをチューナーとして扱う。
   ko: |-
