--- a/data/cards/51473858.yaml
+++ b/data/cards/51473858.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Motoqueiro Goblin Clatter Explosivo
   ja: <ruby>百鬼羅刹<rt>ゴブリンライダー</rt></ruby> <ruby>爆<rt>ばく</rt></ruby><ruby>音<rt>おん</rt></ruby>クラッタ
   ja_romaji: Goburin Raidā Bakuon Kuratta
   ko: 고블린라이더 폭음 클러터
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode escolher 1 monstro "Goblin" no seu Cemitério, exceto "Motoqueiro Goblin Clatter Explosivo"; Invoque-o por Invocação-Especial. Durante a Fase Principal do seu oponente, se este card estiver no seu Cemitério (Efeito Rápido): você pode desassociar 1 Matéria Xyz de um monstro em qualquer campo e, se isso acontecer, Invoque este card por Invocação-Especial, mas bana-o quando ele deixar o campo. Você só pode usar cada efeito de "Motoqueiro Goblin Clatter Explosivo" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合、「百鬼羅刹 爆音クラッタ」以外の自分の墓地の「ゴブリン」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。②：このカードが墓地に存在する場合、相手メインフェイズに発動できる。フィールドのＸ素材を１つ取り除き、このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。
   ko: |-
