--- a/data/cards/64257161.yaml
+++ b/data/cards/64257161.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Motoqueiro Goblin Mean Impiedosa
   ja: <ruby>百鬼羅刹<rt>ゴブリンライダー</rt></ruby> <ruby>冷<rt>れい</rt></ruby><ruby>血<rt>けつ</rt></ruby>ミアンダ
   ja_romaji: Goburin Raidā Reiketsu Mianda
   ko: 고블린라이더 냉혈 미안다
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode Invocar por Invocação-Especial 1 monstro "Goblin" da sua mão, exceto "Motoqueiro Goblin Mean Impiedosa". Durante sua Fase Principal, se este card estiver no seu Cemitério: você pode desassociar 1 Matéria Xyz de um monstro em qualquer campo e, se isso acontecer, Invoque este card por Invocação-Especial, mas bana-o quando ele deixar o campo. Você só pode usar cada efeito de "Motoqueiro Goblin Mean Impiedosa" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。手札から「百鬼羅刹 冷血ミアンダ」以外の「ゴブリン」モンスター１体を特殊召喚する。②：このカードが墓地に存在する場合、自分メインフェイズに発動できる。フィールドのＸ素材を１つ取り除き、このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。
   ko: |-
