--- a/data/cards/90241276.yaml
+++ b/data/cards/90241276.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Poplar Olho de Cobra
   ja: <ruby>蛇眼の炎燐<rt>スネークアイズ・ポプルス</rt></ruby>
   ja_romaji: Sunēkuaizu Popurusu
   ko: 스네이크아이즈 포프루스
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for adicionado à sua mão, exceto ao comprá-lo: você pode Invocar este card por Invocação-Especial. Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 Magia/Armadilha "Olho de Cobra" do seu Deck à sua mão. Se este card for enviado para o Cemitério: você pode escolher 1 monstro de FOGO no seu Cemitério; coloque-o com a face para cima na Zona de Magias & Armadilhas do seu dono como uma Magia Contínua. Você só pode usar cada efeito de "Poplar Olho de Cobra" uma vez por turno.
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがドロー以外の方法で手札に加わった場合に発動できる。このカードを特殊召喚する。②：このカードが召喚・特殊召喚した場合に発動できる。デッキから「スネークアイ」魔法・罠カード１枚を手札に加える。③：このカードが墓地へ送られた場合、自分の墓地の炎属性モンスター１体を対象として発動できる。そのモンスターを永続魔法カード扱いで元々の持ち主の魔法＆罠ゾーンに表側表示で置く。
   ko: |-
