--- a/data/cards/15845914.yaml
+++ b/data/cards/15845914.yaml
@@ -53,6 +53,7 @@ images:
   illustration: MagiciansofBondsandUnity-OW-3.png
 - index: 4
   image: MagiciansofBondsandUnity-LEDE-JP-QCScR.png
+  illustration: MagiciansofBondsandUnity-CA-4.png
 sets:
   en:
   - set_number: DUNE-EN000
