--- a/data/cards/27770341.yaml
+++ b/data/cards/27770341.yaml
@@ -185,6 +185,7 @@ sets:
     set_name: The Lost Art Promotion Vol.2
     rarities:
     - Ultra Rare
+    - Secret Rare
   zh-CN:
   - set_number: DBMF-SC043
     set_name: 'Deck Build Pack: Mystic Fighters'
