--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -875,6 +875,7 @@ sets:
     set_name: The Lost Art Promotion Vol.2
     rarities:
     - Ultra Rare
+    - Secret Rare
   - set_number: WPP4-KR066
     set_name: World Premiere Pack 2023
     rarities:
