--- a/data/cards/03643300.yaml
+++ b/data/cards/03643300.yaml
@@ -365,6 +365,7 @@ sets:
     set_name: The Lost Art Promotion Vol.2
     rarities:
     - Ultra Rare
+    - Secret Rare
   zh-TW:
   - set_number: PR01-TC008
     set_name: Special Promotional Pack 2015 Volume 1
