--- a/data/cards/19230407.yaml
+++ b/data/cards/19230407.yaml
@@ -288,6 +288,7 @@ sets:
     set_name: The Lost Art Promotion Vol.2
     rarities:
     - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
