--- a/data/cards/30068120.yaml
+++ b/data/cards/30068120.yaml
@@ -172,6 +172,7 @@ sets:
     set_name: The Lost Art Promotion Vol.2
     rarities:
     - Ultra Rare
+    - Secret Rare
   zh-CN:
   - set_number: CL01-SC059
     set_name: Classic Pack 01
