--- a/data/cards/41420027.yaml
+++ b/data/cards/41420027.yaml
@@ -519,6 +519,7 @@ sets:
     set_name: The Lost Art Promotion Vol.2
     rarities:
     - Ultra Rare
+    - Secret Rare
   zh-TW:
   - set_number: SP01-TC060
     set_name: Starter Pack Volume 1
