--- a/data/cards/56910167.yaml
+++ b/data/cards/56910167.yaml
@@ -216,6 +216,7 @@ sets:
     set_name: The Lost Art Promotion Vol.2
     rarities:
     - Ultra Rare
+    - Secret Rare
   zh-TW:
   - set_number: GS06-TC012
     set_name: Gold Series 2014
