--- a/data/cards/68815132.yaml
+++ b/data/cards/68815132.yaml
@@ -157,6 +157,7 @@ sets:
     set_name: The Lost Art Promotion Vol.2
     rarities:
     - Ultra Rare
+    - Secret Rare
   zh-CN:
   - set_number: DP21-SC009
     set_name: 'Duelist Pack: Legend Duelist 4'
