--- a/data/cards/75064463.yaml
+++ b/data/cards/75064463.yaml
@@ -186,6 +186,7 @@ sets:
     set_name: The Lost Art Promotion Vol.2
     rarities:
     - Ultra Rare
+    - Secret Rare
   zh-CN:
   - set_number: DP21-SC007
     set_name: 'Duelist Pack: Legend Duelist 4'
