--- a/data/cards/91098230.yaml
+++ b/data/cards/91098230.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can Special Summon 1 "Ancient Gear" monster from your hand, except "Ancient Gear Tanker", ignoring its Summoning conditions, or, if your opponent controls a monster, you can Special Summon it from your GY instead. You can target 1 face-up card you control; destroy it, and if you do, for the rest of this turn, all monsters you control that are "Ancient Gear Golem" or mention it will gain 600 ATK. You can only use each effect of "Ancient Gear Tanker" once per turn.
+    If this card is Normal or Special Summoned: You can Special Summon 1 "Ancient Gear" monster from your hand, except "Ancient Gear Tanker", ignoring its Summoning conditions, or, if your opponent controls a monster, you can Special Summon it from your GY instead. You can target 1 face-up card you control; destroy it, also, for the rest of this turn, all monsters you control that are "Ancient Gear Golem" or mention it will gain 600 ATK. You can only use each effect of "Ancient Gear Tanker" once per turn.
   de:
   es:
   fr:
