--- a/data/cards/22377815.yaml
+++ b/data/cards/22377815.yaml
@@ -50,7 +50,11 @@ atk: 1500
 def: 500
 images:
 - index: 1
+  image: AquarianAlessa-TAEV-JP-SR.jpg
+  illustration: AquarianAlessa-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: AquarianAlessa-TAEV-EN-SR-UE.png
+  illustration: AquarianAlessa-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: TAEV-EN020
