--- a/data/cards/55428811.yaml
+++ b/data/cards/55428811.yaml
@@ -40,7 +40,11 @@ series:
 - Utopic
 images:
 - index: 1
+  image: FifthHope-DE02-JP-C.jpg
+  illustration: FifthHope-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: FifthHope-SGX2-EN-C-1E.png
+  illustration: FifthHope-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: TAEV-EN045
