--- a/data/cards/82639107.yaml
+++ b/data/cards/82639107.yaml
@@ -40,7 +40,11 @@ series:
 - Contact
 images:
 - index: 1
+  image: ConvertContact-18TP-JP-C.png
+  illustration: ConvertContact-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: ConvertContact-BLRR-EN-UR-1E.png
+  illustration: ConvertContact-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: TAEV-EN047
