--- a/data/rush/18583.yaml
+++ b/data/rush/18583.yaml
@@ -1,6 +1,6 @@
 konami_id: 18583
 name:
-  en: Chromatographicus
+  en: Chromatographagas
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: Chromatographicus-RDKP12-JP-R.png
+  image: Chromatographagas-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP001
