--- a/rush.yaml
+++ b/rush.yaml
@@ -91681,7 +91681,7 @@ yugipedia_page_id: 715129
 ---
 konami_id: 18583
 name:
-  en: Chromatographicus
+  en: Chromatographagas
   de:
   es:
   fr:
@@ -91717,7 +91717,7 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: Chromatographicus-RDKP12-JP-R.png
+  image: Chromatographagas-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP001
@@ -133184,3 +133184,140 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1041872
+---
+konami_id:
+name:
+  en: Super Graphagas Archer
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>ＳＰ<rt>スーパー</rt></ruby>グラファガス・アーチャー
+  ja_romaji: Sūpā Gurafagasu Āchā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 1 Level 7 Pyro Type Normal Monster from your Graveyard on top of your Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 2500 ATK until the end of this turn. Then, you can make 1 face-up Level 9 or lower monster on your opponent's field lose 1500 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Pyro / Fusion / Effect
+attribute: FIRE
+level: 9
+atk: 3000
+def: 2500
+materials:
+  en: |-
+    "Chromatographagas" + "Super Assistant Achi"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Chemistry
+images:
+- index: 1
+  image: SuperGraphagasArcher-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP042
+    set_name: Transamu of Transcendence
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1041930
+---
+konami_id:
+name:
+  en: Voidvelgr God Requiem
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴォイドヴェルグ・ゴッドレクイエム
+  ja_romaji: Voidoverugu Goddo Rekuiemu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: DARK
+level: 10
+atk: 2500
+def: 2000
+series:
+- Voidvelgr
+images:
+- index: 1
+  image: VoidvelgrGodRequiem-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP037
+    set_name: Saikyō Jump April 2024 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1041934
