--- a/data/cards/05786513.yaml
+++ b/data/cards/05786513.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>時<rt>とき</rt></ruby>の<ruby>沈黙<rt>ちんもく</rt></ruby>－ターン・サイレンス
+  ja: <ruby>時<rt>とき</rt></ruby>の<ruby>沈<rt>ちん</rt></ruby><ruby>黙<rt>もく</rt></ruby>－ターン・サイレンス
   ja_romaji: Toki no Chinmoku - Tān Sairensu
   ko:
   ko_rr:
