--- a/data/cards/34351849.yaml
+++ b/data/cards/34351849.yaml
@@ -38,7 +38,11 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
+  image: FroggyForcefield-DE02-JP-C.jpg
+  illustration: FroggyForcefield-TF05-JP-VG-artwork.png
+- index: '1.1'
   image: FroggyForcefield-LODT-EN-R-1E.png
+  illustration: FroggyForcefield-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: LODT-EN073
