--- a/data/cards/61962135.yaml
+++ b/data/cards/61962135.yaml
@@ -38,7 +38,11 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
+  image: GloriousIllusion-DS14-JP-UR.png
+  illustration: GloriousIllusion-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: GloriousIllusion-SDLI-EN-C-1E.png
+  illustration: GloriousIllusion-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: LODT-EN071
@@ -107,7 +111,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-JPL27
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   ko:
@@ -116,7 +120,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-KRL31
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
 limit_regulation:
