--- a/data/rush/20035.yaml
+++ b/data/rush/20035.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20035
 name:
   en: Transamu Scraied
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの一番上のカードを墓地へ送る。この効果でモンスター（光属性／ギャラクシー族）が墓地へ送られた場合、自分フィールドの表側表示モンスターを３体まで選ぶ事ができる。選んだ場合、このターン、選んだモンスターの攻撃は貫通する。この効果で「トランザム・ライナック」を選んだ場合、さらに相手フィールドの攻撃表示モンスターを全て表側守備表示にできる。
   ko:
   zh-TW:
   zh-CN:
