--- a/rush.yaml
+++ b/rush.yaml
@@ -128992,6 +128992,70 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 1032439
 ---
+konami_id: 20035
+name:
+  en: Transamu Scraied
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザム・スクライド
+  ja_romaji: Toranzamu Sukuraido
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    なし
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top card of your Deck to the Graveyard. If you sent a LIGHT Attribute Galaxy Type monster to the Graveyard by this effect, you can choose up to 3 face-up monsters on your field. If you do, those monsters inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if they attack a Defense Position monster this turn. Then, if it was "Transamu Rainac", you can change all Attack Position monsters on your opponent's field to face-up Defense Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分のデッキの一番上のカードを墓地へ送る。この効果でモンスター（光属性／ギャラクシー族）が墓地へ送られた場合、自分フィールドの表側表示モンスターを３体まで選ぶ事ができる。選んだ場合、このターン、選んだモンスターの攻撃は貫通する。この効果で「トランザム・ライナック」を選んだ場合、さらに相手フィールドの攻撃表示モンスターを全て表側守備表示にできる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 5
+atk: 1600
+def: 500
+series:
+- Transamu
+images:
+- index: 1
+  image: TransamuScraied-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP036
+    set_name: Saikyō Jump March 2024 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1037157
+---
 konami_id:
 name:
   en: Seiyaryu
@@ -130183,68 +130247,6 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1036951
----
-konami_id:
-name:
-  en: Transamu Scraied
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: トランザム・スクライド
-  ja_romaji: Toranzamu Sukuraido
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    None
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Send the top card of your Deck to the Graveyard. If you sent a LIGHT Attribute Galaxy Type monster to the Graveyard by this effect, you can choose up to 3 face-up monsters on your field. If you do, those monsters inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if they attack a Defense Position monster this turn. Then, if it was "Transamu Rainac", you can change all Attack Position monsters on your opponent's field to face-up Defense Position.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Galaxy / Effect
-attribute: LIGHT
-level: 5
-atk: 1600
-def: 500
-series:
-- Transamu
-images:
-- index: 1
-  image: TransamuScraied-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP036
-    set_name: Saikyō Jump March 2024 promotional card
-    rarities:
-    - Normal Parallel Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
-yugipedia_page_id: 1037157
 ---
 konami_id:
 name:
