--- a/data/cards/06116731.yaml
+++ b/data/cards/06116731.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 6116731
 name:
   en: Swarm of Centipedes
   de: Hundertfüßler-Schwarm
@@ -71,5 +71,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 1040943
-fake_password:
-- 101203085
