--- a/data/cards/42510430.yaml
+++ b/data/cards/42510430.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 42510430
 name:
   en: Sunset Beat
   de: Sonnenuntergangsstimmung
@@ -65,5 +65,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 1040951
-fake_password:
-- 101203086
