--- a/data/cards/70843274.yaml
+++ b/data/cards/70843274.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 70843274
 name:
   en: Psychic Processor
   de: Psi-Prozessor
@@ -74,5 +74,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 1040950
-fake_password:
-- 101203081
