--- a/data/cards/78905039.yaml
+++ b/data/cards/78905039.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 78905039
 name:
   en: Tricorn the Cacophonous Concert
   de: Trihorn das kakofonische Konzert
@@ -69,5 +69,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 1040940
-fake_password:
-- 101203087
