--- a/data/rush/yugipedia1038466.yaml
+++ b/data/rush/yugipedia1038466.yaml
@@ -45,6 +45,8 @@ attribute: LIGHT
 level: 7
 atk: 2400
 def: 1600
+series:
+- Dice
 images:
 - index: 1
   image: DicemiteGirlChirori-RDKP16-JP-OP.png
