--- a/data/rush/yugipedia1038467.yaml
+++ b/data/rush/yugipedia1038467.yaml
@@ -38,6 +38,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Dice
 images:
 - index: 1
   image: GracefulDice-RDKP16-JP-OP.png
