--- a/data/cards/21454943.yaml
+++ b/data/cards/21454943.yaml
@@ -42,7 +42,11 @@ atk: 1400
 def: 800
 images:
 - index: 1
+  image: PsychicCommander-DE03-JP-C.png
+  illustration: PsychicCommander-TF05-JP-VG-artwork.png
+- index: '1.1'
   image: PsychicCommander-TU04-EN-R-UE.jpg
+  illustration: PsychicCommander-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: TDGS-EN020
