--- a/data/cards/78845026.yaml
+++ b/data/cards/78845026.yaml
@@ -38,7 +38,11 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
+  image: LightwaveTuning-TDGS-JP-C.jpg
+  illustration: LightwaveTuning-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: LightwaveTuning-TDGS-EN-C-1E.jpg
+  illustration: LightwaveTuning-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: TDGS-EN050
