--- a/data/cards/84055227.yaml
+++ b/data/cards/84055227.yaml
@@ -42,7 +42,11 @@ atk: 1700
 def: 0
 images:
 - index: 1
+  image: MaidenofMacabre-EXP2-JP-C.png
+  illustration: MaidenofMacabre-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: MaidenofMacabre-SBC1-EN-C-1E.png
+  illustration: MaidenofMacabre-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: TDGS-EN084
