--- a/data/cards/13857930.yaml
+++ b/data/cards/13857930.yaml
@@ -53,7 +53,11 @@ series:
 - Neo-Spacian
 images:
 - index: 1
+  image: NeoSpacianTwinkleMoss-PTDN-JP-C.jpg
+  illustration: NeoSpacianTwinkleMoss-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: NeoSpacianTwinkleMoss-PTDN-EN-C-1E.png
+  illustration: NeoSpacianTwinkleMoss-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: PTDN-EN042
