--- a/data/cards/32233746.yaml
+++ b/data/cards/32233746.yaml
@@ -38,7 +38,11 @@ card_type: Trap
 property: Counter
 images:
 - index: 1
+  image: VanquishingLight-DS14-JP-UR.png
+  illustration: VanquishingLight-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: VanquishingLight-SDLI-EN-C-1E.png
+  illustration: VanquishingLight-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: LODT-EN089
@@ -87,7 +91,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-JPL29
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   ko:
@@ -96,7 +100,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-KRL33
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
 limit_regulation:
