--- a/data/cards/54493213.yaml
+++ b/data/cards/54493213.yaml
@@ -44,7 +44,11 @@ series:
 - Helios
 images:
 - index: 1
+  image: HeliosThePrimordialSun-AT01-JP-NPR.png
+  illustration: HeliosThePrimordialSun-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: HeliosThePrimordialSun-SGX3-EN-C-1E.png
+  illustration: HeliosThePrimordialSun-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: WC6-EN002
