--- a/data/cards/56514812.yaml
+++ b/data/cards/56514812.yaml
@@ -44,7 +44,11 @@ series:
 - Warrior
 images:
 - index: 1
+  image: Kunoichi-TDGS-JP-C.jpg
+  illustration: Kunoichi-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: Kunoichi-TDGS-EN-C-1E.png
+  illustration: Kunoichi-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: TDGS-EN031
