--- a/data/cards/80887952.yaml
+++ b/data/cards/80887952.yaml
@@ -44,7 +44,11 @@ series:
 - Helios
 images:
 - index: 1
+  image: HeliosDuoMegistus-E06-JP-UR.png
+  illustration: HeliosDuoMegistus-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: HeliosDuoMegistus-SGX3-EN-C-1E.png
+  illustration: HeliosDuoMegistus-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: WC6-EN003
