--- a/data/rush/yugipedia1041997.yaml
+++ b/data/rush/yugipedia1041997.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Roll a six-sided die. Draw cards equal to [the result]. Then, if the result is 3 or lower, you can add up to 2 "Graceful Dice" and/or "Skull Dice" from your Graveyard to your hand.
+    Roll a six-sided die. Draw cards equal to [the result]. Then, you can add up to 2 "Graceful Dice" and/or "Skull Dice" from your Graveyard to your hand if the result was 3 or lower.
   de:
   es:
   fr:
