--- a/data/cards/91623717.yaml
+++ b/data/cards/91623717.yaml
@@ -38,7 +38,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: ChainStrike-CDIP-EN-C-1E.jpg
+  image: ChainStrike-CDIP-EN-C-UE.png
 sets:
   en:
   - set_number: CDIP-EN043
