--- a/data/tcg-speed-skill/yugipedia717094.yaml
+++ b/data/tcg-speed-skill/yugipedia717094.yaml
@@ -28,7 +28,7 @@ activation:
   zh-CN:
 effect:
   en: |-
-    Once per Duel, during your Main Phase, you can shuffle 1 "Elemental HERO" monster you control into your Deck, then Special Summon 1 Level 4 or lower "Elemental HERO" monster from your Main Deck with a different name than the shuffled card.
+    Once per Duel, during your Main Phase, you can shuffle 1 "Elemental HERO" monster you control into your Main Deck, then Special Summon 1 Level 4 or lower "Elemental HERO" monster from your Main Deck with a different name than the shuffled card.
   de: |-
     Einmal pro Duell, während deiner Main Phase, kannst du 1 „Elementar-HELD“-Monster, das du kontrollierst, in dein Main Deck mischen, dann beschwöre 1 „Elementar-HELD“-Monster der Stufe 4 oder niedriger mit einem unterschiedlichen Namen als die gemischte Karte als Spezialbeschwörung von deinem Main Deck.
   es:
