--- a/data/cards/72767833.yaml
+++ b/data/cards/72767833.yaml
@@ -38,7 +38,11 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
+  image: CardRotator-DP08-JP-C.jpg
+  illustration: CardRotator-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: CardRotator-CSOC-EN-C-1E.jpg
+  illustration: CardRotator-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CSOC-EN045
