--- a/data/rush/20051.yaml
+++ b/data/rush/20051.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20051
 name:
   en: Excite Ground Dragon
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドにモンスターが３体いて、自分がドローフェイズに手札が５枚になるように通常のドローをする場合、代わりに手札が６枚になるように通常のドローをする。
   ko:
   zh-TW:
   zh-CN:
