--- a/data/cards/32180819.yaml
+++ b/data/cards/32180819.yaml
@@ -38,7 +38,11 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
+  image: Psychokinesis-DE03-JP-C.png
+  illustration: Psychokinesis-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: Psychokinesis-HSRD-EN-C-1E.png
+  illustration: Psychokinesis-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CSOC-EN056
