--- a/data/cards/45379225.yaml
+++ b/data/cards/45379225.yaml
@@ -53,7 +53,11 @@ def: 2000
 materials: 1 Tuner + 1 or more non-Tuner monsters
 images:
 - index: 1
+  image: PsychicLifetrancer-DE03-JP-C.png
+  illustration: PsychicLifetrancer-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: PsychicLifetrancer-CSOC-EN-R-1E.jpg
+  illustration: PsychicLifetrancer-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CSOC-EN041
