--- a/data/rush/20052.yaml
+++ b/data/rush/20052.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20052
 name:
   en: LED Pigeon
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター１体を選ぶ。このターン、そのモンスターの攻撃力は１０００アップし、戦闘では破壊されない。
   ko:
   zh-TW:
   zh-CN:
