--- a/data/rush/20053.yaml
+++ b/data/rush/20053.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20053
 name:
   en: Dream Live
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードは、自分の墓地のモンスター（守備力０）５体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードがフィールドゾーンに表側表示である限り、お互いのフィールドの表側表示モンスターの攻撃力は５００アップする。
   ko:
   zh-TW:
   zh-CN:
