--- a/data/rush/20054.yaml
+++ b/data/rush/20054.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20054
 name:
   en: Cheater's Hidden Ball Trick
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手モンスターの攻撃宣言時、自分の墓地のモンスター２０体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    攻撃してきたモンスターを破壊する。このターン、自分は戦闘ダメージを受けない。
   ko:
   zh-TW:
   zh-CN:
