--- a/rush.yaml
+++ b/rush.yaml
@@ -90212,6 +90212,8 @@ attribute: LIGHT
 level: 1
 atk: 0
 def: 0
+series:
+- Love
 images:
 - index: 1
   image: LoveAngel-RDORP1-JP-SR.png
@@ -123196,6 +123198,8 @@ attribute: LIGHT
 level: 3
 atk: 0
 def: 0
+series:
+- Love
 images:
 - index: 1
   image: PureLoveAngel-RDKP15-JP-SR.png
