--- a/data/cards/05786513.yaml
+++ b/data/cards/05786513.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 face-up monster you control; increase its Level by 3, and if you activated this card in response to your opponent's monster effect activation while you controlled "Gold Sarcophagus of Light" and a monster that mentions it, negate that opponent's effect. During damage calculation, if your monster that mentions "Gold Sarcophagus of Light" battles: You can banish this card from your GY; end the Battle Phase. You can only activate 1 "Turn Silence" per turn.
+    Target 1 face-up monster you control; increase its Level by 3, also if you activated this card in response to your opponent's monster effect activation while you controlled "Gold Sarcophagus of Light" and a monster that mentions it, negate that opponent's effect. During damage calculation, if your monster that mentions "Gold Sarcophagus of Light" battles: You can banish this card from your GY; end the Battle Phase. You can only activate 1 "Turn Silence" per turn.
   de:
   es:
   fr:
