--- a/data/cards/41044418.yaml
+++ b/data/cards/41044418.yaml
@@ -38,6 +38,8 @@ text:
     ②：把魔法与陷阱区域的表侧表示的这张卡送去墓地才能发动。这个回合，可以用自己的「死者苏生」把自己墓地的「太阳神之翼神龙」无视召唤条件特殊召唤。这个效果发动的回合的结束阶段，自己必须把「死者苏生」的效果特殊召唤的「太阳神之翼神龙」送去墓地。
 card_type: Spell
 property: Continuous
+series:
+- Millennium
 images:
 - index: 1
   image: MillenniumRevelation-MZMI-EN-R-1E.png
