--- a/data/cards/kdb20033.yaml
+++ b/data/cards/kdb20033.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>Ｔｈｅ Ｌｅｇｅｎｄ ｏｆ Ｔｉｃｋｅｔｓ<rt>ザ・レジェンド・オブ・チケッツ</rt></ruby>
+  ja: <ruby>Ｔｈｅ Ｌｅｇｅｎｄ ｏｆ Ｔｉｃｋｅｔｓ<rt>ザ・レジェンド・オブ・チケット</rt></ruby>
   ja_romaji: Za Rejendo Obu Chikettsu
   ko:
   ko_rr:
