--- a/data/cards/05130393.yaml
+++ b/data/cards/05130393.yaml
@@ -40,6 +40,8 @@ attribute: DARK
 level: 4
 atk: 1000
 def: 1000
+series:
+- Millennium
 images:
 - index: 1
   image: MillenniumSeeker-EGS1-EN-UR-1E.png
