--- a/data/cards/23171610.yaml
+++ b/data/cards/23171610.yaml
@@ -39,6 +39,8 @@ property: Quick-Play
 images:
 - index: 1
   image: LimiterRemoval-PSV-EN-SR-UE-25thAnniversaryEdition.png
+- index: 2
+  image: LimiterRemoval-QCCU-JP-OP.png
 sets:
   en:
   - set_number: DB1-EN179
