--- a/data/cards/82482194.yaml
+++ b/data/cards/82482194.yaml
@@ -40,6 +40,8 @@ attribute: EARTH
 level: 5
 atk: 2000
 def: 1800
+series:
+- Millennium
 images:
 - index: 1
   image: MillenniumScorpion-DR3-EN-R-UE.jpg
