--- a/data/cards/89785779.yaml
+++ b/data/cards/89785779.yaml
@@ -42,6 +42,8 @@ attribute: DARK
 level: 2
 atk: 0
 def: 1400
+series:
+- Millennium
 images:
 - index: 1
   image: MillenniumEyesIllusionist-LDS1-EN-UR-1E-Blue.png
