--- a/data/rush/17017.yaml
+++ b/data/rush/17017.yaml
@@ -45,6 +45,8 @@ property: Normal
 images:
 - index: 1
   image: ShipofSevenTreasures-RDMRP2-JP-SR.png
+- index: 2
+  image: ShipofSevenTreasures-RDDK01-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP07-JP052
@@ -59,6 +61,11 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Super Rare
+  - set_number: RD/DK01-JP006
+    set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/KP07-KR052
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
