--- a/rush.yaml
+++ b/rush.yaml
@@ -51536,6 +51536,8 @@ property: Normal
 images:
 - index: 1
   image: ShipofSevenTreasures-RDMRP2-JP-SR.png
+- index: 2
+  image: ShipofSevenTreasures-RDDK01-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP07-JP052
@@ -51550,6 +51552,11 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Super Rare
+  - set_number: RD/DK01-JP006
+    set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/KP07-KR052
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
@@ -133415,3 +133422,286 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1041997
+---
+konami_id:
+name:
+  en: All Love Goddess
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: オールラヴ・ゴッデス
+  ja_romaji: Ōru Ravu Goddesu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If you have a face-up monster with 0 original ATK on your field, you can Normal Summon this card without Tributing.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card gains ATK equal to [the number of face-up monsters with 0 original ATK on your field] x 1000. You take no battle damage from battles involving your monsters with 0 ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: LIGHT
+level: 8
+atk: 0
+def: 0
+series:
+- Love
+images:
+- index: 1
+  image: AllLoveGoddess-ORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP039
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1042421
+---
+konami_id:
+name:
+  en: Valkyrion the Unity Warrior
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>結<rt>けっ</rt></ruby><ruby>束<rt>そく</rt></ruby>の<ruby>戦<rt>せん</rt></ruby><ruby>士<rt>し</rt></ruby>マグネット・バルキリオン
+  ja_romaji: Kessoku no Senshi Magunetto Barukirion
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send this face-up card from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Alpha The Magnet Warrior", 1 "Beta The Magnet Warrior", and 1 "Gamma The Magnet Warrior" from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Rock / Fusion / Effect
+attribute: EARTH
+level: 8
+atk: 3500
+def: 3900
+materials:
+  en: |-
+    "Alpha The Magnet Warrior" + "Beta The Magnet Warrior" + "Gamma The Magnet Warrior"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Magnet Warrior
+images:
+- index: 1
+  image: ValkyriontheUnityWarrior-ORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP025
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1042423
+---
+konami_id:
+name:
+  en: Black Skull Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    "Summoned Skull" + "Red-Eyes Black Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    「デーモンの召喚」＋「真紅眼の黒竜」
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Fusion / Effect
+attribute: DARK
+level: 9
+atk: 3200
+def: 2500
+materials:
+  en: |-
+    "Summoned Skull" + "Red-Eyes Black Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    「デーモンの召喚」＋「真紅眼の黒竜」
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Red-Eyes
+images:
+- index: 1
+  image: BlackSkullDragon-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP000
+    set_name: Transamu of Transcendence
+    rarities:
+    - Over Rush Rare
+yugipedia_page_id: 1042437
+---
+konami_id:
+name:
+  en: Deep Space Yggdrago
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ディープスペース・ユグドラゴ
+  ja_romaji: Dīpu Supēsu Yugudorago
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card cannot be destroyed by your opponent's card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Face-up Level 7 or higher monsters on your opponent's field lose 1000 ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Fusion / Effect
+attribute: DARK
+level: 10
+atk: 4000
+def: 2400
+materials:
+  en: |-
+    "Space Yggdrago" + "Space Yggdrago" + "Space Yggdrago"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Space
+images:
+- index: 1
+  image: DeepSpaceYggdrago-ORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP007
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1042478
