--- a/rush.yaml
+++ b/rush.yaml
@@ -51536,6 +51536,7 @@ property: Normal
 images:
 - index: 1
   image: ShipofSevenTreasures-RDMRP2-JP-SR.png
+  illustration: ShipofSevenTreasures-G002-JP-VG-artwork.png
 - index: 2
   image: ShipofSevenTreasures-RDDK01-JP-OP.png
 sets:
@@ -126086,6 +126087,8 @@ materials:
   ko:
   zh-TW:
   zh-CN:
+series:
+- Red-Eyes
 images:
 - index: 1
   image: BlackDragonSkullArchfiend-RDHC01-JP-UR.png
