--- a/data/cards/41044418.yaml
+++ b/data/cards/41044418.yaml
@@ -39,7 +39,7 @@ text:
 card_type: Spell
 property: Continuous
 series:
-- Millennium
+- Sennen
 images:
 - index: 1
   image: MillenniumRevelation-MZMI-EN-R-1E.png
