--- a/data/cards/yugipedia1042408.yaml
+++ b/data/cards/yugipedia1042408.yaml
@@ -36,7 +36,7 @@ images:
   image: DragonofSoulandPride-INFO-JP-OP.png
 sets:
   en:
-  - set_number: INFO-JP000
+  - set_number: INFO-EN000
     set_name: Infinite Forbidden
     rarities:
     - Quarter Century Secret Rare
