--- a/data/cards/08454126.yaml
+++ b/data/cards/08454126.yaml
@@ -12,7 +12,7 @@ name:
   ko: 네프티스의 이어주는 손
   ko_rr:
   zh-TW:
-  zh-CN: 奈芙提斯之联结者
+  zh-CN: 奈芙蒂斯的连系者
 text:
   en: |-
     You can Ritual Summon this card with "Rebirth of Nephthys". If this card is Ritual Summoned: You can Special Summon 1 "Nephthys" Ritual Monster from your hand or Deck, except "Conductor of Nephthys" (this is treated as a Ritual Summon). If this card is Tributed or destroyed by a "Nephthys" card effect: You can activate this effect; during the next Standby Phase, destroy up to 3 "Nephthys" cards, except Ritual Monsters, 1 each from your hand, Deck, and field. You can only use each effect of "Conductor of Nephthys" once per turn.
@@ -33,9 +33,8 @@ text:
   zh-TW: |-
     以「奈芙蒂斯的輪迴」降臨。此卡名的①②效果，１回合各僅限使用１次。①：可在此卡儀式召喚成功的狀況下發動。視為儀式召喚，從手牌・牌組特殊召喚１隻「奈芙蒂斯的連接者」以外的「奈芙蒂斯」儀式怪獸。②：可在此卡因「奈芙蒂斯」卡的效果被解放的狀況下，或被破壞的狀況下發動。在下一個準備階段，從我方手牌・牌組・場上選擇最多各１張儀式怪獸以外的「奈芙蒂斯」卡破壞。
   zh-CN: |-
-    「奈芙提斯的轮回」降临。这个卡名的①②的效果1回合各能使用1次。
-    ①：这张卡仪式召唤成功的场合才能发动。从手卡·卡组把「奈芙提斯之联结者」以外的1只「奈芙提斯」仪式怪兽当作仪式召唤作特殊召唤。
-    ②：这张卡被「奈芙提斯」卡的效果所解放的场合或者所破坏的场合才能发动。下次的准备阶段，从自己的手卡·卡组·场上各选最多1张仪式怪兽以外的「奈芙提斯」卡破坏。
+    以“奈芙蒂斯的轮回”降临
+    此卡名的①②效果1回合仅可各使用1次。①：此卡仪式召唤的情况下可以发动。从手牌·牌组将1只“奈芙蒂斯的连系者”以外的“奈芙蒂斯”仪式怪兽视为仪式召唤特殊召唤。②：此卡因“奈芙蒂斯”卡的效果、被解放的情况下或被破坏的情况下可以发动。在下个准备阶段，从自己的手牌·牌组·场上各将最多1张仪式怪兽以外的“奈芙蒂斯”卡破坏。
 card_type: Monster
 monster_type_line: Spellcaster / Ritual / Effect
 attribute: WIND
