--- a/data/cards/10875327.yaml
+++ b/data/cards/10875327.yaml
@@ -12,7 +12,7 @@ name:
   ko: 지박신 <ruby>Aslla<rt>아스라</rt></ruby> <ruby>piscu<rt>피스크</rt></ruby>
   ko_rr:
   zh-TW:
-  zh-CN: 地缚神 阿斯利亚·皮斯科
+  zh-CN: 地缚神 Aslla piscu
 text:
   en: |-
     There can only be 1 "Earthbound Immortal" monster on the field. If there is no face-up Field Spell on the field, destroy this card. Your opponent's monsters cannot target this card for attacks. This card can attack directly. If this face-up card leaves the field, except by its own effect: Destroy as many face-up monsters your opponent controls as possible, and if you do, inflict 800 damage to your opponent for each monster destroyed.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     冠有「地縛神」之名的怪獸在場上僅限以正面表示存在１隻。在不存在正面表示的場地魔法卡的狀況下，此卡將被破壞。對方無法將此卡選為攻擊對象。此卡可直接攻擊對方玩家。此外，正面表示的此卡以此卡效果以外的方式從場上離開時，將對方場上的所有正面表示怪獸全部破壞，給予對方LP破壞怪獸數量×８００的傷害。
   zh-CN: |-
-    名字带有「地缚神」的怪兽在场上只能有1只表侧表示存在。没有场地魔法卡表侧表示存在的场合这张卡破坏。对方不能选择这张卡作为攻击对象。这张卡可以直接攻击对方玩家。此外，场上表侧表示存在的这张卡因这张卡的效果以外的方法从场上离开时，对方场上表侧表示存在的怪兽全部破坏，给与对方基本分破坏的怪兽数量×800的数值的伤害。
+    ①：“地缚神”怪兽在场上仅可有1只以表侧表示存在。②：此卡可直接攻击。③：对手怪兽不可将此卡选择为攻击对象。④：不存在表侧表示的场地魔法卡的情况下，此卡将被破坏。⑤：表侧表示的此卡以此卡的效果以外的方法从场上离开的情况下发动。将对手场上的表侧表示怪兽全部破坏，给予对手相当于所破坏数量×800的伤害。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: DARK
