--- a/data/cards/61441708.yaml
+++ b/data/cards/61441708.yaml
@@ -12,7 +12,7 @@ name:
   ko: 네프티스의 봉황신
   ko_rr: Nepeutiseu-ui Bonghwangsin
   zh-TW: 奈芙蒂斯的鳳凰神
-  zh-CN: 奈芙提斯之凤凰神
+  zh-CN: 奈芙蒂斯之凤凰神
 text:
   en: |-
     Once per turn, during your next Standby Phase after this card was destroyed by card effect and sent to the GY: Special Summon this card from the GY. If you do: Destroy all Spells and Traps on the field.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     此卡因卡牌效果被破坏并送入墓地的场合，下一个我方准备阶段时从墓地特殊召唤此卡。以此效果特殊召唤成功时，破坏场上的全部魔法、陷阱卡。
   zh-CN: |-
-    ①：这张卡被效果破坏送去墓地的场合，下次的自己准备阶段发动。这张卡从墓地特殊召唤。②：这张卡的①的效果特殊召唤成功的场合发动。场上的魔法·陷阱卡全部破坏。
+    ①：此卡因效果被破坏并被送至墓地的情况下，在下个自己的准备阶段发动。从墓地将此卡特殊召唤。②：以此卡的①效果特殊召唤的情况下发动。将场上的魔法·陷阱卡全部破坏。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: FIRE
