--- a/data/cards/67725394.yaml
+++ b/data/cards/67725394.yaml
@@ -12,7 +12,7 @@ name:
   ko: 낙서괴물－테라노
   ko_rr: Nakseogoemul - Terano
   zh-TW:
-  zh-CN: 涂鸦兽-暴龙
+  zh-CN: 涂yā兽－bào龙
 text:
   en: |-
     You can Tribute Summon this card by Tributing 1 Dinosaur monster. During the Main Phase, if a Dinosaur monster is on the field, you can (Quick Effect): Immediately after this effect resolves, Tribute Summon this card from your hand. You can only use this effect of "Doodle Beast - Tyranno" once per turn. If this card is Normal Summoned: You can destroy 1 monster on the field, then, if this card was Tribute Summoned by Tributing a "Doodle Beast" monster(s), it gains ATK equal to half the destroyed monster's ATK on the field.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     可解放１隻恐龍族怪獸升級召喚此卡。此卡名的①效果，１回合僅限使用１次。①：在場上存在恐龍族怪獸的狀況下，可在我方・對方的主要階段發動。升級召喚手牌的此卡。②：可在此卡召喚成功的狀況下發動。選擇場上的１隻怪獸破壞。在解放「塗鴉獸」怪獸升級召喚此卡的狀況下，此卡的攻擊力另依據破壞的怪獸攻擊力的一半進行提升。
   zh-CN: |-
-    这张卡可以将1只恐龙族怪兽解放来高等召唤。这个卡名的①效果1回合只能使用1次。①：场上有恐龙族怪兽存在的场合，自己或对手的主要阶段可以发动。将手牌的这张卡高等召唤。②：这张卡召唤成功的场合可以发动。选场上1只怪兽破坏。这张卡是将「らくがきじゅう／涂鸦兽」怪兽解放来高等召唤的场合，再使这张卡的攻击力上升破坏的怪兽的攻击力的一半数值。
+    此卡可解放1只恐龙族怪兽来上级召唤。此卡名的①效果1回合仅可使用1次。①：场上存在恐龙族怪兽的情况下，在自己·对手的主要阶段可以发动。将手牌的此卡上级召唤。②：此卡召唤的情况下可以发动。将场上的1只怪兽破坏。此卡是通过解放“涂yā兽”怪兽进行上级召唤的情况下，此卡的攻击力进而上升相当于所破坏怪兽攻击力一半的数值。
 card_type: Monster
 monster_type_line: Dinosaur / Effect
 attribute: EARTH
