--- a/data/cards/77202120.yaml
+++ b/data/cards/77202120.yaml
@@ -12,7 +12,7 @@ name:
   ko: 어썰트 싱크론
   ko_rr: Eosseolteu Singkeuron
   zh-TW:
-  zh-CN: 强袭同调士
+  zh-CN: 强袭同步士
 text:
   en: |-
     During your Main Phase: You can Special Summon this card from your hand, then take 700 damage, also while it is face-up in the Monster Zone, you cannot Special Summon from the Extra Deck, except Synchro Monsters. If a face-up Dragon Synchro Monster(s) you control is Tributed or banished (except during the Damage Step): You can banish this card from your GY, then target 1 of those monsters; Special Summon it. You can only use each effect of "Assault Synchron" once per turn.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     此卡名的①②效果，１回合各僅限使用１次。①：可在我方主要階段發動。從手牌特殊召喚此卡。其後，我方受到７００傷害。只要透過此效果特殊召喚的此卡以正面表示存在於怪獸區，我方可從額外牌組特殊召喚的怪獸就僅限同步怪獸。②：在我方場上正面表示的龍族同步怪獸被解放的狀況下或被除外的狀況下，可將墓地的此卡除外，將１隻該怪獸做為對象發動。特殊召喚該怪獸。
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：自己的主要阶段可以发动。将这张卡从手牌特殊召唤。那之后，自己受到700伤害。只要用这个效果特殊召唤的这张卡在怪兽区以表侧表示存在，自己从额外卡组特殊召唤的就只能是同调怪兽。②：自己场上的表侧表示的龙族同调怪兽被解放的场合或者被除外的场合，可以将墓地的这张卡除外，以那样的1只怪兽为对象发动。将那只怪兽特殊召唤。
+    此卡名的①②效果1回合仅可各使用1次。①：在自己的主要阶段可以发动。从手牌将此卡特殊召唤。然后，自己受到700伤害。只要以此效果特殊召唤的此卡以表侧表示存在于怪兽区域，自己从额外牌组仅可特殊召唤同步怪兽。②：自己场上表侧表示的龙族同步怪兽被解放的情况下或被除外的情况下，将墓地的此卡除外，以该1只怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Machine / Tuner / Effect
 attribute: DARK
