--- a/data/cards/86926989.yaml
+++ b/data/cards/86926989.yaml
@@ -12,7 +12,7 @@ name:
   ko: 려신－시라누이
   ko_rr: Lyeosin - Siranui
   zh-TW:
-  zh-CN: 丽神-不知火
+  zh-CN: 丽神－不知火
 text:
   en: |-
     2+ Zombie monsters
@@ -43,10 +43,7 @@ text:
     此卡名的③效果１回合僅限使用１次。①：只要此卡存在於怪獸區，我方場上的同步怪獸就不會因效果被破壞。②：只要此卡存在於怪獸區，我方的炎屬性怪獸就不會因戰鬥被破壞。③：可在對方回合，將我方１隻被除外的不死族同步怪獸做為對象發動。特殊召喚該怪獸至此卡連結指向的我方場上。
   zh-CN: |-
     不死族怪兽2只以上
-    这个卡名的③的效果1回合只能使用1次。
-    ①：只要这张卡在怪兽区域存在，自己场上的同调怪兽不会被效果破坏。
-    ②：只要这张卡在怪兽区域存在，自己的炎属性怪兽不会被战斗破坏。
-    ③：对方回合，以除外的1只自己的不死族同调怪兽为对象才能发动。那只怪兽在作为这张卡所连接区的自己场上特殊召唤。
+    此卡名的③效果1回合仅可使用1次。①：只要此卡存在于怪兽区域，自己场上的同步怪兽不会因效果被破坏。②：只要此卡存在于怪兽区域，自己的炎属性怪兽不会因战斗被破坏。③：在对手回合中，以自己除外状态的1只不死族同步怪兽为对象可以发动。将该怪兽特殊召唤至此卡连接端的自己场上。
 card_type: Monster
 monster_type_line: Zombie / Link / Effect
 attribute: FIRE
