--- a/data/cards/92770064.yaml
+++ b/data/cards/92770064.yaml
@@ -43,9 +43,7 @@ text:
     ①：可在此卡連結召喚成功的狀況下發動。從牌組將１張「聖天樹」魔法・陷阱卡加入手牌。②：此卡不會因對方效果被破壞，無法被選為攻擊對象（在我方場上僅存在適用此效果的怪獸的狀況下，對方的攻擊將變為對我方的直接攻擊）。③：１回合１次，可解放此卡連結指向的１隻我方連結怪獸發動。依該連結符號數量，選擇對方場上的卡片破壞。
   zh-CN: |-
     连接怪兽2只以上
-    ①：这张卡连接召唤成功的场合才能发动。从卡组把1张「圣天树」魔法·陷阱卡加入手卡。
-    ②：这张卡不会被对方的效果破坏，不会被作为攻击对象（自己场上只有被这个效果适用的怪兽存在的状态中对方的攻击变成对自己的直接攻击）。
-    ③：1回合1次，把这张卡所连接区1只自己的连接怪兽解放才能发动。选最多有那个连接标记数量的对方场上的卡破坏。
+    ①：此卡连接召唤的情况下可以发动。从牌组将1张“圣天树”魔法·陷阱卡加入手牌。②：此卡不会因对手的效果被破坏，不会成为攻击对象（自己场上仅存在适用此效果的怪兽的状态下，对手的攻击变为对自己的直接攻击）。③：1回合1次，解放此卡连接端的自己的1只连接怪兽可以发动。将对手场上最多为该连接标记数量的卡破坏。
 card_type: Monster
 monster_type_line: Plant / Link / Effect
 attribute: EARTH
