--- a/data/cards/96381979.yaml
+++ b/data/cards/96381979.yaml
@@ -12,7 +12,7 @@ name:
   ko: 괴염성왕－소우코
   ko_rr:
   zh-TW: 魁炎星王－宋虎
-  zh-CN: 魁炎星王-宋虎
+  zh-CN: 魁炎星王－宋虎
 text:
   en: |-
     2 Level 4 Beast-Warrior monsters
@@ -42,7 +42,8 @@ text:
     兽战士族等级4怪兽×2
     超量召唤此卡时，可从牌组将1张冠有「炎舞」之名的魔法、陷阱卡盖牌。此外，1回合1次，透过移除此卡的1个超量素材，使场上除兽战士族以外的全部效果怪兽的效果直至对手回合结束时无效。此卡从场上被送入墓地时，透过将我方场上3张以表侧表示的冠有「炎舞」之名的魔法、陷阱卡送入墓地，从牌组以守备表示特别召唤2只具有相同攻击力、等级4或以下的兽战士族怪兽。
   zh-CN: |-
-    兽战士族4星怪兽×2。这张卡XYZ召唤时，可以从卡组把1张名字带有「炎舞」的魔法·陷阱卡盖放。此外，1回合1次，可以通过把这张卡1个XYZ素材取除，兽战士族以外的场上的全部效果怪兽的效果直到对方回合结束时无效。这张卡从场上送去墓地时，可以通过把自己场上3张表侧表示的名字带有「炎舞」的魔法·陷阱卡送去墓地，把持有相同攻击力的2只4星以下的兽战士族怪兽从卡组守备表示特殊召唤。
+    兽战士族等级4怪兽×2
+    ①：此卡超量召唤时可以发动。从牌组将1张“炎舞”魔法·陷阱卡放置在自己场上。②：1回合1次，去除此卡的1个超量素材可以发动。场上兽战士族以外的所有效果怪兽的效果直至对手回合结束时为止无效化。③：此卡从场上被送至墓地时，将自己场上表侧表示的3张“炎舞”魔法·陷阱卡送至墓地可以发动。从牌组将2只等级4以下且攻击力相同的兽战士族怪兽以守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Beast-Warrior / Xyz / Effect
 attribute: FIRE
