--- a/data/cards/05829717.yaml
+++ b/data/cards/05829717.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 龙魔导骑士 黑魔导士
+  zh-CN: 龙魔导骑士黑魔导
 text:
   en: |-
     "Dark Magician" + 1 Level 7 or higher Dragon or Warrior monster
@@ -42,8 +42,8 @@ text:
     「黑魔導」＋等級７以上的龍族・戰士族怪獸
     ①：在我方的怪獸攻擊守備表示怪獸的狀況下，給予對方攻擊力超過該守備力數值的戰鬥傷害。②：１回合１次，可在我方的怪獸因戰鬥破壞對方怪獸時發動。給予對方等同於該被破壞的怪獸原本攻擊力數值的傷害。③：可在此卡被破壞的狀況下發動。從我方手牌・牌組・額外牌組・墓地選擇「黑魔導」、「龍騎士蓋亞」各１隻特殊召喚。
   zh-CN: |-
-    「ブラック・マジシャン／黑魔导士」+等级7以上的龙族或战士族怪兽
-    ①：自己的怪兽攻击守备表示怪兽的场合，给予对手其攻击力超过那个守备力的数值的战斗伤害。②：1回合1次，自己的怪兽用战斗将对手怪兽破坏时可以发动。给予对手那只破坏的怪兽的原攻击力数值的伤害。③：这张卡被破坏的场合可以发动。从自己的手牌、卡组、额外卡组或墓地选「ブラック・マジシャン／黑魔导士」「竜騎士ガイア／龙骑士盖亚」各1只特殊召唤。
+    “黑魔导”＋等级7以上的龙族·战士族怪兽
+    ①：自己的怪兽攻击守备表示怪兽的情况下，依攻击力超出该怪兽守备力的数值来给予对手战斗伤害。②：1回合1次，自己的怪兽战斗破坏对手怪兽时可以发动。给予对手相当于该被破坏的怪兽原本攻击力数值的伤害。③：此卡被破坏的情况下可以发动。从自己的手牌·牌组·额外牌组·墓地将“黑魔导”、“龙骑士盖亚”各1只特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: DARK
