--- a/data/cards/06351147.yaml
+++ b/data/cards/06351147.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: LP를 절반 지불하고, "트랜잭션 롤백" 이외의 상대 묘지의 일반 함정 카드 1장을 대상으로 하여 발동할 수 있다. 이 효과는, 그 일반 함정 카드 발동시의 효과와 같아진다. ②: 묘지의 이 카드를 제외하고, LP를 절반 지불하여, "트랜잭션 롤백" 이외의 자신 묘지의 일반 함정 카드 1장을 대상으로 하고 발동할 수 있다. 이 효과는, 그 일반 함정 카드 발동시의 효과와 같아진다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合只能有1次使用其中任意1个。①：可以支付一半LP，以「トランザクション・ロールバック／事务回滚」以外的对手墓地的1张通常陷阱卡为对象发动。这个效果变为与那张通常陷阱卡发动时的效果相同。②：可以将墓地的这张卡除外，支付一半LP，以「トランザクション・ロールバック／事务回滚」以外的自己墓地的1张通常陷阱卡为对象发动。这个效果变为与那张通常陷阱卡发动时的效果相同。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：支付一半LP，以对手墓地“事务回滚”以外的1张通常陷阱卡为对象可以发动。此效果变为与该通常陷阱卡发动时的效果相同。②：将墓地的此卡除外，支付一半LP，以自己墓地“事务回滚”以外的1张通常陷阱卡为对象可以发动。此效果变为与该通常陷阱卡发动时的效果相同。
 card_type: Trap
 property: Normal
 images:
