--- a/data/cards/36114945.yaml
+++ b/data/cards/36114945.yaml
@@ -12,7 +12,7 @@ name:
   ko: 수빙 마요괴－설녀
   ko_rr: Subing Mayogoe - Seonnyeo
   zh-TW:
-  zh-CN: 垂冰之魔妖-雪女
+  zh-CN: 垂冰之魔妖－雪女
 text:
   en: |-
     2+ Zombie monsters
@@ -43,10 +43,7 @@ text:
     此卡名的②③效果，１回合各僅限使用１次。①：「垂冰之魔妖－雪女」在我方場上僅限１隻以正面表示存在。②：在此卡特殊召喚成功的狀況下，可將對方場上的１隻效果怪獸做為對象發動。將該怪獸效果變為無效。③：可將墓地的此卡除外發動。從我方墓地的怪獸及被除外的我方怪獸中，選擇１隻不死族同步怪獸特殊召喚。此效果在對方回合也可發動。
   zh-CN: |-
     不死族怪兽2只以上
-    这个卡名的②③的效果1回合各能使用1次。
-    ①：「垂冰之魔妖-雪女」在自己场上只能有1只表侧表示存在。
-    ②：这张卡特殊召唤成功的场合，以对方场上1只效果怪兽为对象才能发动。那只怪兽的效果无效。
-    ③：把墓地的这张卡除外才能发动。从自己墓地的怪兽以及除外的自己怪兽之中选1只不死族同调怪兽特殊召唤。这个效果在对方回合也能发动。
+    此卡名的②③效果1回合仅可各使用1次。①：“垂冰之魔妖－雪女”在自己场上仅可有1张以表侧表示存在。②：此卡特殊召唤的情况下，以对手场上的1只效果怪兽为对象可以发动。将该怪兽的效果无效。③：在自己·对手回合中，将墓地的此卡除外可以发动。将自己的墓地·除外状态的1只不死族同步怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Zombie / Link / Effect
 attribute: WATER
