--- a/data/cards/44330098.yaml
+++ b/data/cards/44330098.yaml
@@ -12,7 +12,7 @@ name:
   ko: 저승사자 고즈
   ko_rr:
   zh-TW:
-  zh-CN: 冥府之使者 格斯
+  zh-CN: 冥府之使者格斯
 text:
   en: |-
     When you take damage from a card in your opponent's possession: You can Special Summon this card from your hand. You must control no cards to activate and to resolve this effect. When this card is Special Summoned by its effect: Activate the appropriate effect, based on the type of damage.
@@ -49,7 +49,7 @@ text:
     ●戰鬥傷害：特殊召喚１隻「冥府的使者凱茵衍生物」（天使族・光・星７・攻／守？）至我方場上。此衍生物的攻擊力・守備力變為與此時受到的傷害相同的數值。
     ●效果傷害：給予對方LP與我方受到傷害相同數值的傷害。
   zh-CN: |-
-    自己场上没有卡存在的场合，因对方控制的卡受到伤害时，这张卡可以从手卡特殊召唤。这个方法特殊召唤成功时，受到的伤害的种类的以下效果发动。●战斗伤害的场合，在自己场上把1只「冥府之使者衍生物」（天使族·光·7星·攻／守？）特殊召唤。这衍生物的攻击力·守备力变成和这个时候受到的战斗伤害相同数值。●卡的效果的伤害的场合，给与对方基本分和受到的伤害相同伤害。
+    ①：此卡存在于手牌，且自己受到对手的战斗·效果伤害时可以发动（此效果在自己场上不存在卡的情况下才能发动和处理）。将此卡特殊召唤。②：以此卡的①方法特殊召唤的情况下，根据所受到的伤害的种类，发动以下效果。●战斗伤害：将1只“冥府之使者凯茵衍生物”（天使族·光·星7·攻/守?）特殊召唤至自己场上。此衍生物的攻击力·守备力变为与此时所受战斗伤害相同的数值。●效果伤害：给予对手与所受伤害相同数值的伤害。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
