--- a/data/cards/53804307.yaml
+++ b/data/cards/53804307.yaml
@@ -12,7 +12,7 @@ name:
   ko: 염정룡－블래스터
   ko_rr:
   zh-TW: 焰征龍－爆破
-  zh-CN: 焰征龙-爆龙
+  zh-CN: 焰征龙－爆破
 text:
   en: |-
     If this card is in your hand or GY: You can banish a total of 2 FIRE and/or Dragon monsters from your hand and/or GY, except this card; Special Summon this card. During your opponent's End Phase, if you control this Special Summoned card: Return it to the hand. You can discard this card and 1 FIRE monster to the GY, then target 1 card on the field; destroy that target. If this card is banished: You can add 1 FIRE Dragon monster from your Deck to your hand. You can only use 1 "Blaster, Dragon Ruler of Infernos" effect per turn, and only once that turn.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     可从我方手牌、墓地中除外此卡以外的龙族或炎属性怪兽共2只并进行发动。从手牌或墓地特殊召唤此卡。受到特殊召唤的此卡，将于对手的结束阶段时返回至持有者手牌。此外，透过将此卡连同1只炎属性怪兽从手牌丢弃至墓地，来选择位于场上的任意1张卡牌进行破坏。若是此卡被除外的情形，可从牌组中抽取1只龙族、炎属性怪兽加入手牌。「焰征龍－爆破」的效果1回合只可使用1次。
   zh-CN: |-
-    从自己的手卡·墓地把这张卡以外的龙族或者炎属性的怪兽合计2只除外才能发动。这张卡从手卡·墓地特殊召唤。特殊召唤的这张卡在对方的结束阶段时回到持有者手卡。此外，可以通过把这张卡和1只炎属性怪兽从手卡丢弃去墓地，选择场上1张卡破坏。这张卡被除外的场合，可以从卡组把1只　龙族　·炎属性怪兽加入手卡。「焰征龙-爆龙」的效果1回合只能使用1次。
+    此卡名的①～④效果1回合1次，仅可使用其中1个。①：从手牌将此卡和1只炎属性怪兽舍弃至墓地，以场上的1张卡为对象可以发动。将其破坏。②：从自己的手牌·墓地将龙族或炎属性的2只怪兽除外可以发动。从手牌·墓地将此卡特殊召唤。③：此卡是被特殊召唤的情况下，在对手的结束阶段发动。将此卡放回手牌。④：此卡被除外的情况下可以发动。从牌组将1只龙族·炎属性怪兽加入手牌。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: FIRE
