--- a/data/cards/88307361.yaml
+++ b/data/cards/88307361.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：１回合１次，可捨棄１張手牌發動。盡可能從牌組特殊召喚等級４以下的魚族怪獸。透過此效果特殊召喚的怪獸無法進行攻擊宣言，效果被無效化。②：以場上的此卡做為對象發動魔法・陷阱・怪獸效果時，可解放我方場上１隻此卡以外的魚族怪獸發動。將該效果變為無效進行破壞。
   zh-CN: |-
-    ①：1回合1次，丢弃1张手卡才能发动。从卡组把4星以下的鱼族怪兽尽可能特殊召唤。这个效果特殊召唤的怪兽不能攻击宣言，效果无效化。②：以场上的这张卡为对象的魔法·陷阱·怪兽的效果发动时，把这张卡以外的自己场上1只鱼族怪兽解放才能发动。那个效果无效并破坏。
+    ①：1回合1次，舍弃1张手牌可以发动。从牌组将等级4以下的鱼族怪兽尽可能地特殊召唤。以此效果特殊召唤的怪兽不可攻击宣言，效果无效化。②：以场上的此卡为对象的魔法·陷阱·怪兽的效果发动时，解放自己场上1只其他的鱼族怪兽可以发动。将该效果无效并破坏。
 card_type: Monster
 monster_type_line: Fish / Effect
 attribute: WATER
