--- a/data/rush/yugipedia1042478.yaml
+++ b/data/rush/yugipedia1042478.yaml
@@ -28,7 +28,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card cannot be destroyed by your opponent's card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Face-up Level 7 or higher monsters on your opponent's field lose 1000 ATK.
+    This card cannot be destroyed by card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Face-up Level 7 or higher monsters on your opponent's field lose 1000 ATK.
   de:
   es:
   fr:
