--- a/data/cards/33904024.yaml
+++ b/data/cards/33904024.yaml
@@ -12,7 +12,7 @@ name:
   ko: 욕망의 조각
   ko_rr:
   zh-TW:
-  zh-CN: 强欲的碎片
+  zh-CN: 强欲之碎片
 text:
   en: |-
     Each time you draw a card(s) for your normal draw in your Draw Phase, place 1 Greed Counter on this card. You can send this card with 2 or more Greed Counters to the GY; draw 2 cards.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：只要此卡存在於魔法＆陷阱區，每當在我方抽牌階段通常抽牌時，就在此卡放置１個強欲計數物。②：可將置有２個以上強欲計數物的此卡送至墓地發動。我方從牌組抽２張牌。
   zh-CN: |-
-    ①：只要这张卡在魔法与陷阱区域存在，每次自己抽卡阶段通常抽卡，给这张卡放置1个强欲指示物。②：把有强欲指示物2个以上放置的这张卡送去墓地才能发动。自己从卡组抽2张。
+    ①：只要此卡存在于魔法与陷阱区域，每次在自己的抽牌阶段进行通常抽牌，就在此卡上放１个强欲计数物。②：将放有２个以上强欲计数物的此卡送至墓地可以发动。自己从牌组抽２张。
 card_type: Spell
 property: Continuous
 series:
