--- a/data/cards/51790181.yaml
+++ b/data/cards/51790181.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     選擇我方・對方墓地的合計２張卡，送回持有者的牌組。此卡發動後不送至墓地，而是從遊戲除外。「無欲之壺」１回合僅限發動１張。
   zh-CN: |-
-    选择自己或者对方的墓地存在的卡合计2张，回到持有者卡组。这张卡发动后，不送去墓地从游戏中除外。「无欲之壶」在1回合只能发动1张。
+    此卡名的卡１回合仅可发动１张。①：以自己・对手墓地的卡共２张为对象可以发动。将该卡放回持有者的牌组。此卡发动后，不会送往墓地而是除外。
 card_type: Spell
 property: Normal
 series:
