--- a/data/cards/70278545.yaml
+++ b/data/cards/70278545.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     從我方手牌選擇２張卡送回牌組。
   zh-CN: |-
-    从自己手卡让2张卡回到卡组。那之后卡组洗切。
+    ①：挑选２张自己的手牌放回牌组。
 card_type: Spell
 property: Normal
 series:
