--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -1142,6 +1142,10 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: TD02-JP001
+    set_name: 'Yu-Gi-Oh! Duel Monsters: The Legend of Duelist Quarter Century attendance cards'
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: SDK-K001
     set_name: 'Starter Deck: Kaiba'
