--- a/data/cards/98672567.yaml
+++ b/data/cards/98672567.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     主要階段１開始時，可從我方墓地選擇３隻種族不同的怪獸發動。將選擇的３隻怪獸加入牌組後洗牌。其後，我方從牌組抽２張牌。發動此卡的回合，我方無法進入戰鬥階段。
   zh-CN: |-
-    主要阶段1的开始时从自己墓地选择3只不同种族的怪兽才能发动。选择的3只怪兽加入卡组洗切。那之后，从卡组抽2张卡。这张卡发动的回合，自己不能进行战斗阶段。
+    发动此卡的回合中，自己无法进行战斗阶段。①：自己的主要阶段１开始时，以自己墓地的３只怪兽为对象可以发动（同种族最多１只）。将该３只怪兽放回牌组并洗牌。然后，自己从牌组抽２张。
 card_type: Spell
 property: Normal
 series:
