--- a/data/cards/04896788.yaml
+++ b/data/cards/04896788.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     只要此卡以正面攻擊表示存在於場上，在「強欲之壺」發動的狀況下，發動「強欲之壺」的玩家可抽１張牌。
   zh-CN: |-
-    这张卡在场上表侧攻击表示存在时把「强欲之壶」发动的场合，把「强欲之壶」发动的玩家可以再抽1张卡。
+    ①：“强欲之壶”发动的情况下发动。发动该“强欲之壶”的玩家可以从牌组抽１张。此效果在此卡以表侧攻击表示存在于怪兽区域的情况下才能进行发动与处理。
 card_type: Monster
 monster_type_line: Fairy / Effect
 attribute: LIGHT
