--- a/data/cards/22123627.yaml
+++ b/data/cards/22123627.yaml
@@ -12,7 +12,7 @@ name:
   ko: 욕망의 곰치
   ko_rr:
   zh-TW: 强欲海鰻
-  zh-CN: 强欲之海鳝壶
+  zh-CN: 强欲之海鳝
 text:
   en: |-
     Shuffle 2 WATER monsters from your hand into the Deck, then draw 3 cards.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     将手牌中的2只水属性怪兽返回至牌组并洗牌。之后，从牌组中抽取3张卡牌。
   zh-CN: |-
-    ①：手卡2只水属性怪兽回到卡组洗切。那之后，自己从卡组抽3张。
+    ①：从手牌将２只水属性怪兽放回牌组并洗牌。然后，自己从牌组抽３张。
 card_type: Spell
 property: Normal
 series:
