--- a/data/cards/96598015.yaml
+++ b/data/cards/96598015.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     「金滿之壺」１回合僅限發動１張，發動此卡的回合，我方無法進行鐘擺召喚以外的特殊召喚。①：從我方額外牌組的正面表示的鐘擺怪獸及我方墓地的鐘擺怪獸中，選擇合計３隻加入牌組後洗牌。其後，我方從牌組抽２張牌。
   zh-CN: |-
-    「金满之壶」在1回合只能发动1张，这张卡发动的回合，自己不能作灵摆召唤以外的特殊召唤。①：选自己的额外卡组的表侧表示的灵摆怪兽以及自己墓地的灵摆怪兽合计3只，加入卡组洗切。那之后，自己从卡组抽2张。
+    此卡名的卡１回合仅可发动１张，发动此卡的回合中，自己不可进行灵摆召唤以外的特殊召唤。①：从自己的额外牌组的表侧表示灵摆怪兽及自己墓地的灵摆怪兽中挑选合计３只，放回牌组并洗牌。然后，自己从牌组抽２张。
 card_type: Spell
 property: Normal
 series:
