--- a/data/cards/48365709.yaml
+++ b/data/cards/48365709.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Um guerreiro silencioso e mortal especializado em assassínios.
   ja: |-
-    闇の中を音もたてず相手に忍び寄る、暗殺専門の戦士。
+    闇の<ruby>中<rt>なか</rt></ruby>を音もたてず相手に忍び寄る、暗殺専門の戦士。
   ko: |-
     어둠 속에서 소리없이 상대를 미행하는 암살 전문의 전사.
   zh-TW: |-
