--- a/data/cards/yugipedia1042457.yaml
+++ b/data/cards/yugipedia1042457.yaml
@@ -16,14 +16,17 @@ name:
 text:
   en: |-
     One Level 10 or higher monster you control with "Exodia" in its original name gains these effects.
-    ● You can pay half your LP; destroy as many cards in the Spell & Trap Zones as possible, then equip 2 "Forbidden One" monsters from your hand and/or Deck to this card, each as an Equip Spell that gives it 2000 ATK, also you cannot activate other cards or effects for the rest of this turn.
+    ● You can pay half your LP; destroy as many cards in the Spell & Trap Zones as possible, then equip 5 "Forbidden One" monsters from your hand and/or Deck to this card, each as an Equip Spell that gives it 2000 ATK, also you cannot activate other cards or effects for the rest of this turn.
     ● If this card attacks a Defense Position monster, inflict piercing battle damage to your opponent.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：元々のカード名に「エクゾディア」を含むフィールドのレベル１０以上のモンスター１体は以下の効果を得る。
+    ●LPを半分払って発動できる。お互いの魔法＆罠ゾーンのカードを全て破壊する。その後、手札・デッキから「封印されし」モンスター５体をそれぞれ攻撃力２０００アップの装備魔法カード扱いでこのカードに装備する。この効果の発動後、ターン終了時まで自分はこのカード以外のカードの効果を発動できない。
+    ●このカードが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ相手に戦闘ダメージを与える。
   ko:
   zh-TW:
   zh-CN:
