--- a/rush.yaml
+++ b/rush.yaml
@@ -133710,3 +133710,61 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1042478
+---
+konami_id:
+name:
+  en: Secret Alteration
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby>カイザン
+  ja_romaji: Himitsu Kaizan
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 3 cards from your hand to the Graveyard, including 2 LIGHT Attribute Reptile Type monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 3 cards. Then, you can make 1 face-up Level 8 or lower monster on your opponent's field lose 1300 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Secret Investigator
+images:
+- index: 1
+  image: SecretAlteration-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP053
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1042848
