--- a/data/cards/yugipedia1042431.yaml
+++ b/data/cards/yugipedia1042431.yaml
@@ -15,13 +15,14 @@ name:
   zh-CN:
 text:
   en: |-
-    Cannot be destroyed by monster effects. You can only use each of the following effects of "The Caveman that Awoke after a Millennium" once per turn. If this card is in your hand: You can place this card face-up in your Spell & Trap Zone as a Continuous Spell. If this card is a Continuous Spell: You can pay 2000 LP or reveal 1 "Millennium Cross" in your hand; Special Summon this card, then you can add 1 "Millennium" monster or 1 "Sengenjin" from your Deck to your hand.
+    Cannot be destroyed by monster effects. You can only use each of the following effects of "The Caveman that Awoke after a Millennium" once per turn. If this card is in your hand: You can place it face-up in your Spell & Trap Zone as a Continuous Spell. If this card is a Continuous Spell: You can pay 2000 LP or reveal 1 "Millennium Cross" in your hand; Special Summon this card, then you can add 1 "Millennium" monster or 1 "Sengenjin" from your Deck to your hand.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札に存在する場合に発動できる。このカードを永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。②：このカードが永続魔法カード扱いの場合、２０００ＬＰを払うか手札の「千年の十字」１枚を相手に見せて発動できる。このカードを特殊召喚する。その後、デッキから「千年」モンスターか「ミレニアム」モンスター１体を手札に加える事ができる。③：このカードはモンスターゾーンに存在する限り、モンスターの効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
