--- a/data/cards/yugipedia1042427.yaml
+++ b/data/cards/yugipedia1042427.yaml
@@ -16,13 +16,15 @@ name:
 text:
   en: |-
     5 "Forbidden One" monsters
-    Cannot be destroyed by your opponent's card effects. Once per turn, if this card battles, during damage calculation (Quick Effect): You can make this card gain ATK equal to your current LP. Once per turn, when a Spell/Trap Card or effect is activated (Quick Effect): You can negate the activation. Once per turn, during the End Phase: You can Set 1 "Exodo" Spell/Trap or 1 "Obliterate!!!" directly from your Deck. Once per turn, during your Standby Phase: You lose 1000 LP.
+    Cannot be destroyed by your opponent's card effects. Once per turn, if this card battles, during damage calculation (Quick Effect): You can make it gain ATK equal to your current LP. Once per turn, when a Spell/Trap Card or effect is activated (Quick Effect): You can negate the activation. Once per turn, during the End Phase: You can Set 1 "Exodo" Spell/Trap or 1 "Obliterate!!!" directly from your Deck. Once per turn, during your Standby Phase: You lose 1000 LP.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「封印されし」モンスター×５
+    ①：フィールドのこのカードは相手の効果では破壊されない。②：１ターンに１度、このカードが戦闘を行うダメージ計算時に発動できる。このカードの攻撃力は自分のＬＰの数値分アップする。③：１ターンに１度、魔法・罠カードの効果が発動した時に発動できる。その発動を無効にする。④：自分・相手のエンドフェイズに発動できる。デッキから「エグゾード」魔法・罠カード１枚を自分フィールドにセットする。⑤：自分スタンバイフェイズに発動する。自分は１０００ＬＰを失う。
   ko:
   zh-TW:
   zh-CN:
