--- a/data/cards/yugipedia1042445.yaml
+++ b/data/cards/yugipedia1042445.yaml
@@ -15,13 +15,14 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Millennium Fiend Reflection" once per turn. If this card is in your hand: You can place this card face-up in your Spell & Trap Zone as a Continuous Spell. If your opponent activates a card or effect while this card is a Continuous Spell: You can Special Summon this card, then you can gain LP equal to half the ATK of 1 monster on the field.
+    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Millennium Fiend Reflection" once per turn. If this card is in your hand: You can place it face-up in your Spell & Trap Zone as a Continuous Spell. If your opponent activates a card or effect while this card is a Continuous Spell: You can Special Summon this card, then you can gain LP equal to half the ATK of 1 monster on the field.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札に存在する場合に発動できる。このカードを永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。②：このカードが永続魔法カード扱いの状態で、相手の効果が発動した場合に発動できる。このカードを特殊召喚する。その後、フィールドのモンスター１体の攻撃力の半分だけ自分のＬＰを回復できる。③：このカードがモンスターと戦闘を行う場合、その２体はその戦闘では破壊されない。
   ko:
   zh-TW:
   zh-CN:
