--- a/data/cards/yugipedia1042451.yaml
+++ b/data/cards/yugipedia1042451.yaml
@@ -1,27 +1,28 @@
 konami_id:
 password:
 name:
-  en: Temple of the Stone Slabs
+  en: Shrine of Wedju
   de:
   es:
   fr:
   it:
   pt:
-  ja: <ruby>石板<rt>せきばん</rt></ruby>の<ruby>神<rt>しん</rt></ruby><ruby>殿<rt>でん</rt></ruby>
-  ja_romaji: Sekiban no Shinden
+  ja: <ruby>石版<rt>ウェジュ</rt></ruby>の<ruby>神<rt>しん</rt></ruby><ruby>殿<rt>でん</rt></ruby>
+  ja_romaji: Weju no Shinden
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    During your Main Phase: You can place 1 monster from your hand face-up in your Spell & Trap Zone as a Continuous Spell, then place 1 "Millennium" monster or 1 "Sengenjin" from your Deck face-up in your Spell & Trap Zone as a Continuous Spell. You can only use this effect of "Temple of the Stone Slabs" once per turn. If a face-up "Millennium" monster(s) and/or "Sengenjin" you control is destroyed by battle or card effect, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
+    During your Main Phase: You can place 1 monster from your hand face-up in your Spell & Trap Zone as a Continuous Spell, then place 1 "Millennium" monster or 1 "Sengenjin" from your Deck face-up in your Spell & Trap Zone as a Continuous Spell. You can only use this effect of "Shrine of Wedju" once per turn. If a face-up "Millennium" monster(s) and/or "Sengenjin" you control is destroyed by battle or card effect, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①の効果は１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。手札からモンスター１体を永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。その後、「千年」モンスターか「ミレニアム」モンスター１体をデッキから永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。②：自分フィールドの表側表示の、「千年」モンスターか「ミレニアム」モンスターが戦闘・効果で破壊された場合、墓地へ送らずに永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -29,7 +30,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: TempleoftheStoneSlabs-INFO-JP-OP.png
+  image: ShrineofWedju-INFO-JP-OP.png
 sets:
   ja:
   - set_number: INFO-JP054
