--- a/data/cards/yugipedia1042463.yaml
+++ b/data/cards/yugipedia1042463.yaml
@@ -24,7 +24,10 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名はルール上「エグゾード」カードとしても扱う。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドにレベル１０以上の「エクゾディア」モンスターが存在する場合に発動できる。相手フィールドのカードを全て破壊する。②：このターンに墓地へ送られていないこのカードを墓地から除外し、以下の効果から１つを選択して発動できる。
+    ●自分のデッキ・墓地から「封印されし」モンスター１体を手札に加える。
+    ●自分の墓地・除外状態の「封印されし」モンスターを５体までデッキに戻す。
   ko:
   zh-TW:
   zh-CN:
