--- a/data/cards/yugipedia1042468.yaml
+++ b/data/cards/yugipedia1042468.yaml
@@ -15,13 +15,14 @@ name:
   zh-CN:
 text:
   en: |-
-    Take 5 "Forbidden One" Monster Cards from your hand, Deck, and/or face-up field and show them, then Special Summon 1 "The Phantom Exodia Incarnate" from your Extra Deck, then shuffle any face-up Monster Cards you control into the Deck, except "Exodia" Monster Cards whose original Level is 10 or higher, "Sengenjin", and "Millennium" Monster Cards, also you cannot Summon monsters for the rest of this turn (but you can Normal Set). After activation, shuffle this card into the Deck instead of sending it to the GY.
+    Show 5 "Forbidden One" Monster Cards from your hand, Deck, and/or face-up field, then Special Summon 1 "The Phantom Exodia Incarnate" from your Extra Deck, then shuffle any face-up Monster Cards you control into the Deck, except "Exodia" Monster Cards whose original Level is 10 or higher, "Millennium" Monster Cards, and "Sengenjin", also you cannot Summon monsters for the rest of this turn (but you can Normal Set). After activation, shuffle this card into the Deck instead of sending it to the GY.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：自分の手札・デッキ・フィールド（表側表示）の「封印されし」モンスターカード５枚を選び、お互いに確認する。その後、ＥＸデッキから「幻の召喚神エクゾディア」１体を特殊召喚する。「千年」モンスターカード、「ミレニアム」モンスターカード、元々のレベルが１０以上の「エクゾディア」モンスターカードを除く、表側表示のモンスターカードが自分フィールドに存在する場合、さらにそれらを全てデッキに戻す。このターン、自分はモンスターを召喚・反転召喚・特殊召喚できない。発動後このカードは墓地へ送らず、デッキに戻る。
   ko:
   zh-TW:
   zh-CN:
