--- a/rush.yaml
+++ b/rush.yaml
@@ -133768,3 +133768,61 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1042848
+---
+konami_id:
+name:
+  en: Secret File 3000 - Final Tragedy
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby><ruby>ＦＩＬＥ<rt>ファイル</rt></ruby>３０００－ファイナル<ruby>惨<rt>さん</rt></ruby><ruby>劇<rt>げき</rt></ruby>
+  ja_romaji: Himitsu Fairu Sanzen - Fainaru Sangeki
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack while you have 3 face-up LIGHT Attribute Reptile Type monsters on your field, shuffle 3 LIGHT Attribute Reptile Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy all Attack Position monsters on your opponent's field. Then, inflict 3000 damage to your opponent.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Secret Investigator
+images:
+- index: 1
+  image: SecretFile3000FinalTragedy-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP065
+    set_name: Transamu of Transcendence
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1042859
