--- a/data/cards/35268887.yaml
+++ b/data/cards/35268887.yaml
@@ -38,7 +38,11 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
+  image: DamageTranslation-ANPR-JP-C.jpg
+  illustration: DamageTranslation-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: DamageTranslation-ANPR-EN-C-UE.png
+  illustration: DamageTranslation-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANPR-EN071
