--- a/data/cards/50418970.yaml
+++ b/data/cards/50418970.yaml
@@ -38,7 +38,11 @@ card_type: Spell
 property: Equip
 images:
 - index: 1
+  image: SpiritBurner-ANPR-JP-C.jpg
+  illustration: SpiritBurner-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: SpiritBurner-ANPR-EN-C-UE.png
+  illustration: SpiritBurner-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANPR-EN050
