--- a/data/cards/51020079.yaml
+++ b/data/cards/51020079.yaml
@@ -42,7 +42,11 @@ atk: 1500
 def: 1700
 images:
 - index: 1
+  image: CyborgDoctor-ANPR-JP-R.jpg
+  illustration: CyborgDoctor-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: CyborgDoctor-ANPR-EN-C-UE.png
+  illustration: CyborgDoctor-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANPR-EN032
