--- a/data/cards/58820853.yaml
+++ b/data/cards/58820853.yaml
@@ -44,7 +44,11 @@ series:
 - Blackwing
 images:
 - index: 1
+  image: BlackwingShuratheBlueFlame-SPTR-JP-C.png
+  illustration: BlackwingShuratheBlueFlame-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: BlackwingShuratheBlueFlame-LC5D-EN-UR-1E.png
+  illustration: BlackwingShuratheBlueFlame-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: RGBT-ENPP2
