--- a/data/cards/98847704.yaml
+++ b/data/cards/98847704.yaml
@@ -38,7 +38,11 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
+  image: ReleaseRestraintWave-DE04-JP-C.jpg
+  illustration: ReleaseRestraintWave-TF05-JP-VG-artwork.png
+- index: '1.1'
   image: ReleaseRestraintWave-NKRT-EN-PlR-LE.png
+  illustration: ReleaseRestraintWave-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANPR-EN045
