--- a/data/cards/04130270.yaml
+++ b/data/cards/04130270.yaml
@@ -42,7 +42,11 @@ atk: 1200
 def: 2000
 images:
 - index: 1
+  image: GBHunter-DE03-JP-C.png
+  illustration: GBHunter-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: GBHunter-RGBT-EN-SP-1E.png
+  illustration: GBHunter-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: RGBT-EN039
