--- a/data/cards/59616123.yaml
+++ b/data/cards/59616123.yaml
@@ -38,7 +38,11 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
+  image: TrapStun-SD33-JP-C.png
+  illustration: TrapStun-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: TrapStun-SDPL-EN-C-1E.png
+  illustration: TrapStun-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: RGBT-EN071
