--- a/data/cards/73837870.yaml
+++ b/data/cards/73837870.yaml
@@ -42,7 +42,11 @@ atk: 300
 def: 400
 images:
 - index: 1
+  image: SunnyPixie-ANPR-JP-C.jpg
+  illustration: SunnyPixie-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: SunnyPixie-ANPR-EN-C-1E.png
+  illustration: SunnyPixie-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANPR-EN002
