--- a/data/cards/18144506.yaml
+++ b/data/cards/18144506.yaml
@@ -87,6 +87,9 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: OP24-EN0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   - set_number: SDD-003
     set_name: 'Yu-Gi-Oh! Worldwide Edition: Stairway to the Destined Duel promotional cards'
     rarities:
@@ -137,6 +140,9 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: OP24-DE0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   fr:
   - set_number: WC4-F003
     set_name: Yu-Gi-Oh! World Championship Tournament 2004 promotional cards
@@ -179,6 +185,9 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: OP24-FR0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   it:
   - set_number: WC4-I003
     set_name: Yu-Gi-Oh! World Championship Tournament 2004 promotional cards
@@ -221,6 +230,9 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: OP24-IT0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   pt:
   - set_number: LCJW-PT099
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -246,6 +258,9 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: OP24-PT0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   ja:
   - set_number: ''
     set_name: 'Yu-Gi-Oh! Duel Monsters II: Dark duel Stories promotional cards'
