--- a/data/cards/56350972.yaml
+++ b/data/cards/56350972.yaml
@@ -90,6 +90,9 @@ sets:
     set_name: 2015 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP24-EN0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   de:
   - set_number: DUEA-DE050
     set_name: Duelist Alliance
@@ -100,6 +103,9 @@ sets:
     set_name: 2015 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP24-DE0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   fr:
   - set_number: DUEA-FR050
     set_name: Duelist Alliance
@@ -110,6 +116,9 @@ sets:
     set_name: 2015 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP24-FR0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   it:
   - set_number: DUEA-IT050
     set_name: Duelist Alliance
@@ -120,6 +129,9 @@ sets:
     set_name: 2015 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP24-IT0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   pt:
   - set_number: DUEA-PT050
     set_name: Duelist Alliance
@@ -130,6 +142,9 @@ sets:
     set_name: 2015 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP24-PT0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   ja:
   - set_number: DUEA-JP050
     set_name: Duelist Alliance
