--- a/data/cards/22850702.yaml
+++ b/data/cards/22850702.yaml
@@ -76,26 +76,41 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Secret Rare
+  - set_number: OP24-EN0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   de:
   - set_number: CYAC-DE044
     set_name: Cyberstorm Access
     rarities:
     - Secret Rare
+  - set_number: OP24-DE0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   fr:
   - set_number: CYAC-FR044
     set_name: Cyberstorm Access
     rarities:
     - Secret Rare
+  - set_number: OP24-FR0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   it:
   - set_number: CYAC-IT044
     set_name: Cyberstorm Access
     rarities:
     - Secret Rare
+  - set_number: OP24-IT0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   pt:
   - set_number: CYAC-PT044
     set_name: Cyberstorm Access
     rarities:
     - Secret Rare
+  - set_number: OP24-PT0??
+    set_name: OTS Tournament Pack 24
+    rarities:
   ja:
   - set_number: CYAC-JP044
     set_name: Cyberstorm Access
