--- a/data/cards/59123194.yaml
+++ b/data/cards/59123194.yaml
@@ -24,8 +24,8 @@ text:
     1 Cantante + 1 o más monstruos que no sean Cantantes
     Si esta carta es Invocada por Sincronía usando un Monstruo de Péndulo "Mago/a" como Material: puedes seleccionar 1 Carta Mágica en tu Cementerio; añádela a tu mano. Sólo puedes usar este efecto de "Paladín de la Iluminación" una vez por turno. Cuando esta carta destruye a un monstruo de tu adversario en batalla: puedes infligir daño a tu adversario igual al ATK original de ese monstruo.
   fr: |-
-    1 Syntoniseur + 1 monstre non-Syntoniseur ou plus
-    Si cette carte est Invoquée par Synchronisation en utilisant un Monstre Pendule "Magicien" comme Matériel : vous pouvez cibler 1 Carte Magie dans votre Cimetière ; ajoutez-la à votre main. Vous ne pouvez utiliser cet effet de "Paladin de l'Illumination" qu'une fois par tour. Lorsque cette carte détruit un monstre de votre adversaire au combat : vous pouvez infliger des dommages à votre adversaire égaux à la moitié de l'ATK d'origine du monstre.
+    1 Syntoniseur + 1+ monstre non-Syntoniseur
+    Si cette carte est Invoquée par Synchronisation en utilisant un Monstre Pendule "Magicien" comme Matériel : vous pouvez cibler 1 Magie dans votre Cimetière ; ajoutez-la à votre main. Vous ne pouvez utiliser cet effet de "Paladin de l'Illumination" qu'une fois par tour. Lorsque cette carte détruit un monstre de l'adversaire au combat : vous pouvez infliger des dommages à votre adversaire égaux à l'ATK d'origine du monstre.
   it: |-
     1 Tuner + 1 o più mostri non-Tuner
     Se questa carta viene Synchro Evocata utilizzando un Mostro Pendulum "Mago" come Materiale: puoi scegliere come bersaglio 1 Carta Magia nel tuo Cimitero; aggiungila alla tua mano. Puoi utilizzare questo effetto di "Paladino dell'Illuminazione" una sola volta per turno. Quando questa carta distrugge un mostro dell'avversario in battaglia: puoi infliggere al tuo avversario danno pari all'ATK originale di quel mostro.
