--- a/data/cards/72270339.yaml
+++ b/data/cards/72270339.yaml
@@ -50,7 +50,11 @@ series:
 - Diabellstar
 images:
 - index: 1
+  image: DiabellstartheBlackWitch-AGOV-JP-UR.png
+  illustration: DiabellstartheBlackWitch-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: DiabellstartheBlackWitch-AGOV-EN-ScR-1E.png
+  illustration: DiabellstartheBlackWitch-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: AGOV-EN006
