--- a/data/rush/yugipedia1043011.yaml
+++ b/data/rush/yugipedia1043011.yaml
@@ -28,7 +28,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If your Celestial Warrior, Warrior, or Fairy Type monster equipped with an Equip Spell Card attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    If your Celestial Warrior/Warrior/Fairy Type monster equipped with an Equip Spell Card attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
