--- a/data/cards/41392891.yaml
+++ b/data/cards/41392891.yaml
@@ -142,6 +142,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-DE003
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: MRD-DE001
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -216,6 +220,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-IT003
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: MRD-IT001
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -247,6 +255,10 @@ sets:
     - Common
   - set_number: DEM5-PT001
     set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
+  - set_number: DEM6-PT003
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   - set_number: MRD-PT001
