--- a/data/cards/51534754.yaml
+++ b/data/cards/51534754.yaml
@@ -102,6 +102,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: DEM6-DE013
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: STP5-DE019
     set_name: Speed Duel Tournament Pack 5
     rarities:
@@ -156,6 +160,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: DEM6-IT013
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: STP5-IT019
     set_name: Speed Duel Tournament Pack 5
     rarities:
@@ -181,6 +189,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: DEM6-PT013
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: STP5-PT019
     set_name: Speed Duel Tournament Pack 5
     rarities:
