--- a/data/cards/63695531.yaml
+++ b/data/cards/63695531.yaml
@@ -104,6 +104,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-DE012
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR010
     set_name: Dark Revelation Volume 1
@@ -154,6 +158,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-IT012
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT010
     set_name: Dark Revelation Volume 1
@@ -165,6 +173,10 @@ sets:
     - Common
   - set_number: DEM5-PT007
     set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
+  - set_number: DEM6-PT012
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   ja:
