--- a/data/cards/89091579.yaml
+++ b/data/cards/89091579.yaml
@@ -82,6 +82,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: DEM6-DE011
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: LOB-DE008
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
@@ -112,6 +116,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: DEM6-IT011
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: LOB-IT008
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
@@ -123,6 +131,10 @@ sets:
     - Common
   - set_number: SS03-PTB04
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
+    rarities:
+    - Common
+  - set_number: DEM6-PT011
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   - set_number: LOB-PT008
