--- a/data/cards/99261403.yaml
+++ b/data/cards/99261403.yaml
@@ -74,6 +74,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-DE007
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   fr:
   - set_number: SOVR-FR090
     set_name: Stardust Overdrive
@@ -100,6 +104,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-IT007
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   pt:
   - set_number: SS01-PTC04
     set_name: 'Speed Duel Starter Decks: Destiny Masters'
@@ -107,6 +115,10 @@ sets:
     - Common
   - set_number: DEM5-PT003
     set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
+  - set_number: DEM6-PT007
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   ja:
