--- a/data/cards/25880422.yaml
+++ b/data/cards/25880422.yaml
@@ -90,6 +90,10 @@ sets:
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Common
+  - set_number: DEM6-DE017
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: MRD-DE133
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -136,6 +140,10 @@ sets:
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Common
+  - set_number: DEM6-IT017
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: MRD-IT133
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -151,6 +159,10 @@ sets:
     - Common
   - set_number: SBLS-PT038
     set_name: 'Speed Duel: Arena of Lost Souls'
+    rarities:
+    - Common
+  - set_number: DEM6-PT017
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   - set_number: MRD-PT133
