--- a/data/cards/26376390.yaml
+++ b/data/cards/26376390.yaml
@@ -116,6 +116,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-DE014
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   fr:
   - set_number: 5DS1-FR015
     set_name: "Starter Deck: Yu-Gi-Oh! 5D's"
@@ -168,6 +172,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-IT014
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   pt:
   - set_number: BP02-PT058
     set_name: 'Battle Pack 2: War of the Giants'
@@ -184,6 +192,10 @@ sets:
     - Common
   - set_number: DEM5-PT006
     set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
+  - set_number: DEM6-PT014
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   ja:
