--- a/data/cards/59383041.yaml
+++ b/data/cards/59383041.yaml
@@ -84,6 +84,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: DEM6-DE006
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   fr:
   - set_number: DDP-F009
     set_name: 'Starter Deck: Pegasus'
@@ -122,6 +126,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: DEM6-IT006
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   pt:
   - set_number: DIP-P009
     set_name: 'Starter Deck: Pegasus'
@@ -137,6 +145,10 @@ sets:
     - Common
   - set_number: LDS1-PT052
     set_name: 'Legendary Duelists: Season 1'
+    rarities:
+    - Common
+  - set_number: DEM6-PT006
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   ja:
