--- a/data/cards/59744639.yaml
+++ b/data/cards/59744639.yaml
@@ -140,6 +140,10 @@ sets:
     set_name: Event Pack Speed Duel
     rarities:
     - Common
+  - set_number: DEM6-DE020
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: STP3-DE011
     set_name: Speed Duel Tournament Pack 3
     rarities:
