--- a/data/cards/64271667.yaml
+++ b/data/cards/64271667.yaml
@@ -86,6 +86,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-DE001
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   fr:
   - set_number: MDP2-FR008
     set_name: McDonald's Promotional Cards 2
@@ -116,6 +120,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-IT001
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   pt:
   - set_number: SS02-PTB02
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
@@ -123,6 +131,10 @@ sets:
     - Common
   - set_number: DEM5-PT005
     set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
+  - set_number: DEM6-PT001
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   ja:
