--- a/data/cards/88819587.yaml
+++ b/data/cards/88819587.yaml
@@ -134,6 +134,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-DE009
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: MRD-DE061
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -216,6 +220,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-IT009
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: MRD-IT061
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -247,6 +255,10 @@ sets:
     - Common
   - set_number: DEM5-PT004
     set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
+  - set_number: DEM6-PT009
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   - set_number: MRD-PT061
