--- a/data/cards/90876561.yaml
+++ b/data/cards/90876561.yaml
@@ -144,6 +144,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: DEM6-DE002
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: STP4-DE006
     set_name: Speed Duel Tournament Pack 4
     rarities:
@@ -242,6 +246,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: DEM6-IT002
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: STP4-IT006
     set_name: Speed Duel Tournament Pack 4
     rarities:
@@ -276,6 +284,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: DEM6-PT002
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: STP4-PT006
     set_name: Speed Duel Tournament Pack 4
     rarities:
