--- a/data/cards/94119974.yaml
+++ b/data/cards/94119974.yaml
@@ -94,6 +94,10 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom Sneak Peek participation cards'
     rarities:
     - Common
+  - set_number: DEM6-DE005
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   fr:
   - set_number: DB2-FR096
     set_name: Dark Beginning 2
@@ -140,6 +144,10 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom Sneak Peek participation cards'
     rarities:
     - Common
+  - set_number: DEM6-IT005
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT140
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -151,6 +159,10 @@ sets:
     - Common
   - set_number: SBTK-PTSP1
     set_name: 'Speed Duel: Trials of the Kingdom Sneak Peek participation cards'
+    rarities:
+    - Common
+  - set_number: DEM6-PT005
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   ja:
