--- a/data/cards/98495314.yaml
+++ b/data/cards/98495314.yaml
@@ -82,6 +82,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-DE016
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: MRD-DE132
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -116,6 +120,10 @@ sets:
     set_name: Speed Duel Demo Deck
     rarities:
     - Common
+  - set_number: DEM6-IT016
+    set_name: Speed Duel Demo Deck 2020
+    rarities:
+    - Common
   - set_number: MRD-IT132
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -131,6 +139,10 @@ sets:
     - Common
   - set_number: DEM5-PT009
     set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
+  - set_number: DEM6-PT016
+    set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
   - set_number: MRD-PT132
